Tiny fix with the scrollbar not overflowing on right column

--- a/src/App.sass
+++ b/src/App.sass
@@ -254,6 +254,8 @@
   align-items: center
   background-color: black
 
+  overflow-y: auto
+
 .side-container
   display: flex
   flex-direction: column
